--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,7 +4,7 @@
 flask_app_name: "flask-app"
 
 # Base IP address for CORS settings
-flask_base_ip: "{{ ansible_enp0s8.ipv4.address }}"
+flask_base_ip: "{{ ansible_enp0s3.ipv4.address }}"
 
 GIT_ACCESS_TOKEN: "{{ lookup('env', 'GIT_ACCESS_TOKEN') }}"
 
@@ -21,10 +21,12 @@ flask_python_version: "3.8"
 flask_git:
   user: "git-user"
   repo: "flask-app-repo-name"
-  token: "{{ GIT_ACCESS_TOKEN }}"
   branch: "master"
+  domain: "github.com"
   force: yes
   always_reinstall: yes
+  private_repo: yes
+  keyfile: "path/to/privatekey"
 
 flask_base_packages: 
   - "python{{ flask_python_version }}"
